Closed
Bug 871338
Opened 12 years ago
Closed 12 years ago
Layout problem on certain site since landing of Bug 828312
Categories
(Core :: Layout: Block and Inline, defect)
Tracking
()
RESOLVED
FIXED
mozilla24
| Tracking | Status | |
|---|---|---|
| firefox22 | --- | unaffected |
| firefox23 | + | verified |
| firefox24 | + | verified |
People
(Reporter: alice0775, Assigned: dbaron)
References
()
Details
(Keywords: regression)
Attachments
(4 files)
|
182.21 KB,
application/x-zip-compressed
|
Details | |
|
262 bytes,
text/html; charset=UTF-8
|
Details | |
|
250 bytes,
text/html; charset=UTF-8
|
Details | |
|
6.73 KB,
patch
|
bzbarsky
:
review+
akeybl
:
approval-mozilla-aurora+
|
Details | Diff | Splinter Review |
Build Identifier:
http://hg.mozilla.org/mozilla-central/rev/d68224f5325b
Mozilla/5.0 (Windows NT 6.1; WOW64; rv:23.0) Gecko/20130512 Firefox/23.0 ID:20130512030908
Zlip792 reported the problem (See http://forums.mozillazine.org/viewtopic.php?p=12855107#p12855107 )
Steps To Reproduce:
1. Open index.html (Alternative, open URL and logged in)
2. Wait completion of loading page
3. Mouse move over around comments
Actual Results:
"Reply" button is shifted to next line
Expected Results:
"Reply" button should not move.
Regression Window(m-c)
Good:
http://hg.mozilla.org/mozilla-central/rev/4ff8aa4a7295
Mozilla/5.0 (Windows NT 6.1; WOW64; rv:23.0) Gecko/20130511 Firefox/23.0 ID:20130511071545
Bad:
http://hg.mozilla.org/mozilla-central/rev/d68224f5325b
Mozilla/5.0 (Windows NT 6.1; WOW64; rv:23.0) Gecko/20130511 Firefox/23.0 ID:20130511223226
Pushlog:
http://hg.mozilla.org/mozilla-central/pushloghtml?fromchange=4ff8aa4a7295&tochange=d68224f5325b
Regression Window(m-i)
Good:
http://hg.mozilla.org/integration/mozilla-inbound/rev/244595f01a56
Mozilla/5.0 (Windows NT 6.1; WOW64; rv:23.0) Gecko/20130510 Firefox/23.0 ID:20130510172744
Bad:
http://hg.mozilla.org/integration/mozilla-inbound/rev/b7330cb50416
Mozilla/5.0 (Windows NT 6.1; WOW64; rv:23.0) Gecko/20130510 Firefox/23.0 ID:20130510173544
Pushlog:
http://hg.mozilla.org/integration/mozilla-inbound/pushloghtml?fromchange=244595f01a56&tochange=b7330cb50416
Regressed by: Bug 828312
| Reporter | ||
Comment 1•12 years ago
|
||
In local buidl,
Last Good: bf5fd9db9078
First Bad: 09552b219c3a
| Assignee | ||
Comment 2•12 years ago
|
||
| Assignee | ||
Comment 3•12 years ago
|
||
some of the spaces are necessary
| Assignee | ||
Comment 4•12 years ago
|
||
From comment 1, regressing changeset is http://hg.mozilla.org/mozilla-central/rev/09552b219c3a .
Calling MarkLineDirty on all lines when NS_BLOCK_LOOK_FOR_DIRTY_FRAMES is set does *not* make the bug go away.
But adding NS_FRAME_IS_DIRTY to the block when NS_BLOCK_LOOK_FOR_DIRTY_FRAMES is set *does* make the bug go away.
Setting NS_BLOCK_LOOK_FOR_DIRTY_FRAMES on this in nsBlockFrame::ChildIsDirty (in addition to parent) does *not* make the bug go away.
The problem is that the MarkLineDirty needs to happen before GetPrefWidth/GetMinWidth do their work.
| Assignee | ||
Comment 5•12 years ago
|
||
Attachment #748653 -
Flags: review?(bzbarsky)
| Assignee | ||
Updated•12 years ago
|
Assignee: nobody → dbaron
| Assignee | ||
Comment 6•12 years ago
|
||
And I checked that the reftest fails without the patch and passes with it.
Updated•12 years ago
|
tracking-firefox24:
--- → ?
Comment 7•12 years ago
|
||
Comment on attachment 748653 [details] [diff] [review]
Handle NS_BLOCK_LOOK_FOR_DIRTY_FRAMES lazy marking in GetMinWidth and GetPrefWidth in addition to Reflow.
r=me
Attachment #748653 -
Flags: review?(bzbarsky) → review+
| Assignee | ||
Comment 8•12 years ago
|
||
| Assignee | ||
Comment 9•12 years ago
|
||
Comment on attachment 748653 [details] [diff] [review]
Handle NS_BLOCK_LOOK_FOR_DIRTY_FRAMES lazy marking in GetMinWidth and GetPrefWidth in addition to Reflow.
[Approval Request Comment]
Bug caused by (feature/regressing bug #): bug 828312
User impact if declined: incorrect page layout
Testing completed (on m-c, etc.): will be on mozilla-central soon; tested that it fixes the page in question
Risk to taking this patch (and alternatives if risky): reasonably low (I think it's fine for the first week of aurora); alternative is to back out patch 3 in bug 828312
String or IDL/UUID changes made by this patch:none
Attachment #748653 -
Flags: approval-mozilla-aurora?
Comment 10•12 years ago
|
||
Status: NEW → RESOLVED
Closed: 12 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla24
Updated•12 years ago
|
Updated•12 years ago
|
Attachment #748653 -
Flags: approval-mozilla-aurora? → approval-mozilla-aurora+
| Assignee | ||
Comment 11•12 years ago
|
||
| Assignee | ||
Updated•12 years ago
|
Component: CSS Parsing and Computation → Layout: Block and Inline
Hardware: x86 → All
Comment 12•12 years ago
|
||
Verified as fixed on Firefox 23 beta 7:
Mozilla/5.0 (Windows NT 6.1; WOW64; rv:23.0) Gecko/20100101 Firefox/23.0
Mozilla/5.0 (X11; Linux i686; rv:23.0) Gecko/20100101 Firefox/23.0
Mozilla/5.0 (Macintosh; Intel Mac OS X 10.8; rv:23.0) Gecko/20100101 Firefox/23.0
Build ID: 20130718163513
QA Contact: simona.marcu
Comment 13•12 years ago
|
||
Verified as fixed on Firefox 24 beta 2:
Mozilla/5.0 (Windows NT 6.1; rv:24.0) Gecko/20100101 Firefox/24.0
Mozilla/5.0 (X11; Linux i686; rv:24.0) Gecko/20100101 Firefox/24.0
Mozilla/5.0 (Macintosh; Intel Mac OS X 10.8; rv:24.0) Gecko/20100101 Firefox/24.0
Build ID: 20130812173056
Keywords: verifyme
You need to log in
before you can comment on or make changes to this bug.
Description
•